# facsimile

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
.github/workflows/: deploy-storybook.yml
.storybook/: main.cjs
.storybook/static/: P3471_11.json
playground-src/components/: helpers.ts  index.ts
playground-src/components/Generator/: Generator.stories.tsx  Generator.tsx
playground-src/util/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
react-src/components/: index.ts
react-src/components/Cropper/: Cropper.stories.tsx  Cropper.test.tsx  Cropper.tsx  index.ts
react-src/util/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
util/: Cargo.toml
util/src/: cropping.rs  detecting.rs  generating.rs  helpers.rs  lib.rs  rect.rs  transforms.rs
