[package]
name = "facsimile"
version = "0.0.1"
edition = "2021"
description = "Utilities for working with facsimiles of manuscripts in textual scholarship projects (very early alpha)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
