[package]
name = "facsimile"
version = "0.0.2"
edition = "2021"
description = "Utilities for working with facsimiles of manuscripts in textual scholarship projects (very early alpha)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
base64 = "0.13.0"
wasm-bindgen = { version = "0.2.80", optional = true }


[dependencies.image]
version = "0.24.2"
default-features = false
features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]

[dependencies.imageproc]
version = "0.23.0"
default-features = false


[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "det", "gen", "crp"]
no_wasm = ["det", "gen", "crp"]
det = []
gen = []
crp = []
